--- a/index.html
+++ b/index.html
@@ -218,7 +218,13 @@
 
         renderNotes();
     </script>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js');
+}
+</script>
 
 </body>
+
 
 </html>
