--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Two-Sided Notes (Dark Mode)</title>
+    <link rel="manifest" href="./manifest.json">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -228,3 +229,4 @@ if ('serviceWorker' in navigator) {
 
 
 </html>
+
