--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
             <h2 id="modal-title">Add Note</h2>
             <div class="note-sides">
                 <div class="note-side">
-                    <input type="text" id="note-front-title" placeholder="Front Title" />
-                    <textarea id="note-front" placeholder="Front Content"></textarea>
+                    <input type="text" id="note-front-title" />
+                    <textarea id="note-front"></textarea>
                 </div>
                 <div class="note-side">
-                    <input type="text" id="note-back-title" placeholder="Back Title" />
-                    <textarea id="note-back" placeholder="Back Content"></textarea>
+                    <input type="text" id="note-back-title" />
+                    <textarea id="note-back"></textarea>
                 </div>
             </div>
             <br />
